--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+.styl {
+    font-family: cursive;
+    font-size: 50px;
+    color:snow;
+    background-color: slateblue;
+    text-shadow: 2px 2px 5px red;
+    box-shadow: 10px 10px 5px grey;
+ 
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.imager {
+    height: 100px;
+    width: 100px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    background-image: url("./public/diego-ph-v8QdhKbOoC0-unsplash.jpg");
+    background-repeat: no-repeat;
+   background-size: 1400px 650px;
+  padding: 10px;
+}
+button {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  button:hover {background-color: #3e8e41}
+  
+  button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
   }
-  to {
-    transform: rotate(360deg);
+
+  input {
+      padding: 5px;
+      margin: 5px;
+      font-size: 16px;
+      border: 1px solid black;
   }
-}
